RESOLVED FIXED44689
WorkQueue leaks its dispatch queue
https://bugs.webkit.org/show_bug.cgi?id=44689
Summary WorkQueue leaks its dispatch queue
Adam Roben (:aroben)
Reported 2010-08-26 08:45:22 PDT
WorkQueue (on Mac OS X) allocates a dispatch queue, but never releases it. This causes it to leak the queue.
Attachments
Patch (1.08 KB, patch)
2010-08-30 10:24 PDT, Anders Carlsson
sam: review+
Adam Roben (:aroben)
Comment 1 2010-08-26 08:48:43 PDT
Anders Carlsson
Comment 2 2010-08-30 10:24:47 PDT
Anders Carlsson
Comment 3 2010-08-30 10:36:30 PDT
Note You need to log in before you can comment on or make changes to this bug.