WorkQueue leaks its dispatch queue <rdar://problem/8358509> https://bugs.webkit.org/show_bug.cgi?id=44689

Reviewed by Sam Weinig.

* Platform/mac/WorkQueueMac.cpp:
(WorkQueue::platformInvalidate):

Canonical link: https://commits.webkit.org/57160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66396 268f45cc-cd09-0410-ab3c-d52691b4dbfc